--- a/index.html
+++ b/index.html
@@ -4,11 +4,32 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>LauCom</title>
+  <link rel="stylesheet" href="styles.css">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@100;200;300;400;500;600&family=Sarabun:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;1,100;1,200&display=swap"
+    rel="stylesheet">
+  <title>Laurify</title>
 </head>
 
 <body>
-  <h1>Laura</h1>
+  <header class="header">
+    <div class="logo">Laurify</div>
+    <nav class="nav-menu">
+      <a href=#about>Acerca de mí</a>
+      <a href=#blog>Blog</a>
+      <a href=#contact>Contacto</a>
+    </nav>
+  </header>
+  <section id="about" class="about">
+    <h1>Laura</h1>
+    <button class="start">Comienza ahora.</button>
+  </section>
+  <section id="blog" class="Blog">
+    <h2>Blog</h2>
+  </section>
+  <section id="contact" class="contact">
+    <h2>Contacto</h2>
+  </section>
 </body>
 
 </html>
