--- a/index.html
+++ b/index.html
@@ -8,24 +8,32 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@100;200;300;400;500;600&family=Sarabun:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;1,100;1,200&display=swap"
     rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Signika+Negative:wght@300;400;500;600;700&display=swap"
+    rel="stylesheet">
   <title>Laurify</title>
 </head>
 
 <body>
-  <header class="header">
-    <div class="logo">Laurify</div>
-    <nav class="nav-menu">
-      <a href=#about>Acerca de mí</a>
-      <a href=#blog>Blog</a>
-      <a href=#contact>Contacto</a>
-    </nav>
-  </header>
+  <div class="main">
+    <header class="header">
+      <div class="container">
+        <div class="header-logo" aria-label="Home">Laurify</div>
+        <div class="header-menu">
+          <a href=#about>Acerca de mí</a>
+          <a href=#articles>Artículos</a>
+          <a href=#contact>Contacto</a>
+        </div>
+      </div>
+    </header>
+  </div>
   <section id="about" class="about">
     <h1>Laura</h1>
     <button class="start">Comienza ahora.</button>
   </section>
-  <section id="blog" class="Blog">
-    <h2>Blog</h2>
+  <section id="articles" class="articles">
+    <h2>Artículos</h2>
   </section>
   <section id="contact" class="contact">
     <h2>Contacto</h2>
