Javascript functions and more was created

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Signika+Negative:wght@300;400;500;600;700&display=swap"
     rel="stylesheet">
   <title>Laurify</title>
+  <script src="/script.js" defer></script>
 </head>
 
 <body>
@@ -21,23 +22,23 @@
       <div class="container">
         <div class="header-logo" aria-label="Home">Laurify</div>
         <div class="header-menu">
-          <a href=#about>Acerca de mí</a>
-          <a href=#articles>Artículos</a>
-          <a href=#contact>Contacto</a>
+          <a href=#about class="enlace">Acerca de mí</a>
+          <a href=#articles class="enlace">Artículos</a>
+          <a href=#contact class="enlace">Contacto</a>
         </div>
       </div>
     </header>
+    <section id="about" class="about">
+      <h1>Laura</h1>
+      <button class="start">Comienza ahora.</button>
+    </section>
+    <section id="articles" class="articles">
+      <h2>Artículos</h2>
+    </section>
+    <section id="contact" class="contact">
+      <h2>Contacto</h2>
+    </section>
   </div>
-  <section id="about" class="about">
-    <h1>Laura</h1>
-    <button class="start">Comienza ahora.</button>
-  </section>
-  <section id="articles" class="articles">
-    <h2>Artículos</h2>
-  </section>
-  <section id="contact" class="contact">
-    <h2>Contacto</h2>
-  </section>
 </body>
 
 </html>
