Sync in scroll between sections and links

--- a/index.html
+++ b/index.html
@@ -28,14 +28,14 @@
         </div>
       </div>
     </header>
-    <section id="about" class="about">
+    <section id="about" class="section">
       <h1>Laura</h1>
       <button class="start">Comienza ahora.</button>
     </section>
-    <section id="articles" class="articles">
+    <section id="articles" class="section">
       <h2>Artículos</h2>
     </section>
-    <section id="contact" class="contact">
+    <section id="contact" class="section">
       <h2>Contacto</h2>
     </section>
   </div>
