Script tag correction

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Signika+Negative:wght@300;400;500;600;700&display=swap"
     rel="stylesheet">
   <title>Laurify</title>
-  <script src="/script.js" defer></script>
+  <script src="script.js" defer></script>
 </head>
 
 <body>
