--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
       </div>
     </header>
     <section id="about" class="section">
-      <h1>Laura</h1>
-      <button class="start">Comienza ahora.</button>
+      <h1>Obtén la ayuda necesaria para tomar buenas decisiones</h1>
+      <button class="start-btn">Comienza ahora.</button>
     </section>
     <section id="articles" class="section">
       <h2>Artículos</h2>
