--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       </div>
     </header>
     <section id="about" class="section">
-      <img src="/assets/about-image.jpg" alt="about image">
+      <img src="assets/about-image.jpg" alt="about image">
       <h1 class="title">Obtén la ayuda necesaria para tomar buenas decisiones</h1>
       <button class="start-btn">Comienza ahora.</button>
     </section>
