--- a/index.html
+++ b/index.html
@@ -20,7 +20,10 @@
   <div class="main">
     <header class="header">
       <div class="container">
-        <div class="header-logo" aria-label="Home">Laurify</div>
+        <div class="header-logo" aria-label="Home">
+          <small>terapia<br />con</small>
+          <h1>Laura</h1>
+        </div>
         <div class="header-menu">
           <a href=#about class="enlace">Acerca de mí</a>
           <a href=#articles class="enlace">Artículos</a>
