--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <div class="container">
         <div class="header-logo" aria-label="Home">
           <small>terapia<br />con</small>
-          <h1>Laura</h1>
+          Laura
         </div>
         <div class="header-menu">
           <a href=#about class="enlace">Acerca de mí</a>
@@ -33,8 +33,8 @@
     </header>
     <section id="about" class="section">
       <img src="assets/about-image.jpg" alt="about image">
-      <h1 class="title">Obtén la ayuda necesaria para tomar buenas decisiones</h1>
-      <button class="start-btn">Comienza ahora.</button>
+      <h1 class="title">Hagamos que la espiritualidad forme parte de un plan en nuestras vidas.</h1>
+      <button class="start-btn">¡Hagámoslo!</button>
     </section>
     <section id="articles" class="section">
       <h2>Artículos</h2>
