--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
       <div class="container">
         <div class="header-logo" aria-label="Home">
           <small>terapia<br />con</small>
-          Laura
+          <a href=#podcasts class="logo">Laura</a>
         </div>
         <div class="header-menu">
-          <a href=#about class="enlace">Acerca de mí</a>
           <a href=#articles class="enlace">Artículos</a>
+          <a href=#podcasts class="enlace">Podcasts</a>
           <a href=#contact class="enlace">Contacto</a>
         </div>
       </div>
@@ -38,6 +38,14 @@
     </section>
     <section id="articles" class="section">
       <h2>Artículos</h2>
+
+    </section>
+    <section id="podcasts" class="section">
+      <h2>Podcasts</h2>
+      <iframe style="border-radius:12px"
+        src="https://open.spotify.com/embed/episode/6IMVvqNExuCAG2OBLSWv8Y?utm_source=generator&theme=0" width="100%"
+        height="152" frameBorder="0" allowfullscreen=""
+        allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
     </section>
     <section id="contact" class="section">
       <h2>Contacto</h2>
