sync between sections and links corrected

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <div class="container">
         <div class="header-logo" aria-label="Home">
           <small>terapia<br />con</small>
-          <a href=#podcasts class="logo">Laura</a>
+          <a href=#about class="logo">Laura</a>
         </div>
         <div class="header-menu">
           <a href=#articles class="enlace">Artículos</a>
