new colors and section changes

--- a/index.html
+++ b/index.html
@@ -38,7 +38,23 @@
     </section>
     <section id="articles" class="section">
       <h2>Artículos</h2>
-
+      <article class="article-container">
+        <h2>Article Name</h2>
+        <p class="p-article">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Impedit, sapiente laborum
+          inventore officia labore quisquam mollitia nemo quaerat aspernatur eaque, veritatis debitis architecto!
+          Tempora, odit. Rerum error minus quos praesentium?
+          Modi neque magni explicabo fugit illum. Enim quod nihil natus nesciunt sit vel laudantium? Nisi tempore
+          consequatur, vitae adipisci, voluptates quam quas molestias laboriosam maxime praesentium mollitia. Magnam,
+          quod ipsa!
+          Dolore adipisci ipsa dicta, mollitia inventore cumque impedit unde expedita eos quidem quis nam laboriosam,
+          vel voluptatum doloremque sequi non voluptatem. Ex fugiat quam esse hic nemo. Aspernatur, voluptatem magni?
+          Fugit, ex pariatur, sunt quo dolor eum atque saepe voluptatum, cum esse odit. Qui perferendis, eligendi
+          blanditiis non incidunt odio nostrum consectetur natus nihil architecto, nisi obcaecati laboriosam assumenda
+          adipisci.
+          Doloribus cumque minima fugiat architecto fuga dicta tenetur, ullam deleniti ab quia. Maiores sapiente numquam
+          reiciendis tenetur nostrum voluptate temporibus perspiciatis dignissimos at labore. Assumenda beatae ad totam
+          deserunt et?</p>
+      </article>
     </section>
     <section id="podcasts" class="section">
       <h2>Podcasts</h2>
