--- a/index.html
+++ b/index.html
@@ -38,23 +38,95 @@
     </section>
     <section id="articles" class="section">
       <h2>Artículos</h2>
-      <article class="article-container">
-        <h3>Article Name</h3>
-        <p class="p-article">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Impedit, sapiente laborum
-          inventore officia labore quisquam mollitia nemo quaerat aspernatur eaque, veritatis debitis architecto!
-          Tempora, odit. Rerum error minus quos praesentium?
-          Modi neque magni explicabo fugit illum. Enim quod nihil natus nesciunt sit vel laudantium? Nisi tempore
-          consequatur, vitae adipisci, voluptates quam quas molestias laboriosam maxime praesentium mollitia. Magnam,
-          quod ipsa!
-          Dolore adipisci ipsa dicta, mollitia inventore cumque impedit unde expedita eos quidem quis nam laboriosam,
-          vel voluptatum doloremque sequi non voluptatem. Ex fugiat quam esse hic nemo. Aspernatur, voluptatem magni?
-          Fugit, ex pariatur, sunt quo dolor eum atque saepe voluptatum, cum esse odit. Qui perferendis, eligendi
-          blanditiis non incidunt odio nostrum consectetur natus nihil architecto, nisi obcaecati laboriosam assumenda
-          adipisci.
-          Doloribus cumque minima fugiat architecto fuga dicta tenetur, ullam deleniti ab quia. Maiores sapiente numquam
-          reiciendis tenetur nostrum voluptate temporibus perspiciatis dignissimos at labore. Assumenda beatae ad totam
-          deserunt et?</p>
-      </article>
+      <div class="articles-container">
+        <svg class="back" fill="#000000" height="40px" width="40px" version="1.1" id="Layer_1"
+          xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 455 455"
+          xml:space="preserve" transform="rotate(180)">
+          <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
+          <g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g>
+          <g id="SVGRepo_iconCarrier">
+            <g>
+              <g>
+                <path
+                  d="M227.5,0C101.762,0,0,101.75,0,227.5C0,353.239,101.75,455,227.5,455C353.24,455,455,353.25,455,227.5 C455,101.761,353.251,0,227.5,0z M352.947,238.106l-68.939,68.939c-9.371,9.372-25.606,2.836-25.606-10.606v-12.691h-145.74 c-8.284,0-15-6.716-15-15v-82.496c0-8.284,6.716-15,15-15h145.74V158.56c0-13.361,16.202-20.016,25.606-10.606l68.939,68.939 C358.805,222.751,358.805,232.249,352.947,238.106z">
+                </path>
+              </g>
+            </g>
+          </g>
+        </svg>
+        <article class="article-item">
+          <h3>Article 1</h3>
+          <p class="p-article">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Impedit, sapiente laborum
+            inventore officia labore quisquam mollitia nemo quaerat aspernatur eaque, veritatis debitis architecto!
+            Tempora, odit. Rerum error minus quos praesentium?
+            Modi neque magni explicabo fugit illum. Enim quod nihil natus nesciunt sit vel laudantium? Nisi tempore
+            consequatur, vitae adipisci, voluptates quam quas molestias laboriosam maxime praesentium mollitia. Magnam,
+            quod ipsa!
+            Dolore adipisci ipsa dicta, mollitia inventore cumque impedit unde expedita eos quidem quis nam laboriosam,
+            vel voluptatum doloremque sequi non voluptatem. Ex fugiat quam esse hic nemo. Aspernatur, voluptatem magni?
+            Fugit, ex pariatur, sunt quo dolor eum atque saepe voluptatum, cum esse odit. Qui perferendis, eligendi
+            blanditiis non incidunt odio nostrum consectetur natus nihil architecto, nisi obcaecati laboriosam assumenda
+            adipisci.
+            Doloribus cumque minima fugiat architecto fuga dicta tenetur, ullam deleniti ab quia. Maiores sapiente
+            numquam
+            reiciendis tenetur nostrum voluptate temporibus perspiciatis dignissimos at labore. Assumenda beatae ad
+            totam
+            deserunt et?</p>
+        </article>
+        <article class="article-item none">
+          <h3>Article 2</h3>
+          <p class="p-article">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Impedit, sapiente laborum
+            inventore officia labore quisquam mollitia nemo quaerat aspernatur eaque, veritatis debitis architecto!
+            Tempora, odit. Rerum error minus quos praesentium?
+            Modi neque magni explicabo fugit illum. Enim quod nihil natus nesciunt sit vel laudantium? Nisi tempore
+            consequatur, vitae adipisci, voluptates quam quas molestias laboriosam maxime praesentium mollitia. Magnam,
+            quod ipsa!
+            Dolore adipisci ipsa dicta, mollitia inventore cumque impedit unde expedita eos quidem quis nam laboriosam,
+            vel voluptatum doloremque sequi non voluptatem. Ex fugiat quam esse hic nemo. Aspernatur, voluptatem magni?
+            Fugit, ex pariatur, sunt quo dolor eum atque saepe voluptatum, cum esse odit. Qui perferendis, eligendi
+            blanditiis non incidunt odio nostrum consectetur natus nihil architecto, nisi obcaecati laboriosam assumenda
+            adipisci.
+            Doloribus cumque minima fugiat architecto fuga dicta tenetur, ullam deleniti ab quia. Maiores sapiente
+            numquam
+            reiciendis tenetur nostrum voluptate temporibus perspiciatis dignissimos at labore. Assumenda beatae ad
+            totam
+            deserunt et?</p>
+        </article>
+        <article class="article-item none">
+          <h3>Article 3</h3>
+          <p class="p-article">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Impedit, sapiente laborum
+            inventore officia labore quisquam mollitia nemo quaerat aspernatur eaque, veritatis debitis architecto!
+            Tempora, odit. Rerum error minus quos praesentium?
+            Modi neque magni explicabo fugit illum. Enim quod nihil natus nesciunt sit vel laudantium? Nisi tempore
+            consequatur, vitae adipisci, voluptates quam quas molestias laboriosam maxime praesentium mollitia. Magnam,
+            quod ipsa!
+            Dolore adipisci ipsa dicta, mollitia inventore cumque impedit unde expedita eos quidem quis nam laboriosam,
+            vel voluptatum doloremque sequi non voluptatem. Ex fugiat quam esse hic nemo. Aspernatur, voluptatem magni?
+            Fugit, ex pariatur, sunt quo dolor eum atque saepe voluptatum, cum esse odit. Qui perferendis, eligendi
+            blanditiis non incidunt odio nostrum consectetur natus nihil architecto, nisi obcaecati laboriosam assumenda
+            adipisci.
+            Doloribus cumque minima fugiat architecto fuga dicta tenetur, ullam deleniti ab quia. Maiores sapiente
+            numquam
+            reiciendis tenetur nostrum voluptate temporibus perspiciatis dignissimos at labore. Assumenda beatae ad
+            totam
+            deserunt et?</p>
+        </article>
+        <svg class="next" fill="#000000" height="40px" width="40px" version="1.1" id="Layer_1"
+          xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 455 455"
+          xml:space="preserve">
+          <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
+          <g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g>
+          <g id="SVGRepo_iconCarrier">
+            <g>
+              <g>
+                <path
+                  d="M227.5,0C101.762,0,0,101.75,0,227.5C0,353.239,101.75,455,227.5,455C353.24,455,455,353.25,455,227.5 C455,101.761,353.251,0,227.5,0z M352.947,238.106l-68.939,68.939c-9.371,9.372-25.606,2.836-25.606-10.606v-12.691h-145.74 c-8.284,0-15-6.716-15-15v-82.496c0-8.284,6.716-15,15-15h145.74V158.56c0-13.361,16.202-20.016,25.606-10.606l68.939,68.939 C358.805,222.751,358.805,232.249,352.947,238.106z">
+                </path>
+              </g>
+            </g>
+          </g>
+        </svg>
+      </div>
     </section>
     <section id="podcasts" class="section">
       <h2>Podcasts</h2>
