--- a/index.html
+++ b/index.html
@@ -54,9 +54,10 @@
             </g>
           </g>
         </svg>
-        <article class="article-item">
+        <article class="article-item art0">
           <h3>Article 1</h3>
-          <p class="p-article">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Impedit, sapiente laborum
+          <p class="p-article">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Impedit, sapiente
+            laborum
             inventore officia labore quisquam mollitia nemo quaerat aspernatur eaque, veritatis debitis architecto!
             Tempora, odit. Rerum error minus quos praesentium?
             Modi neque magni explicabo fugit illum. Enim quod nihil natus nesciunt sit vel laudantium? Nisi tempore
@@ -73,7 +74,7 @@
             totam
             deserunt et?</p>
         </article>
-        <article class="article-item none">
+        <article class="article-item art1 none">
           <h3>Article 2</h3>
           <p class="p-article">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Impedit, sapiente laborum
             inventore officia labore quisquam mollitia nemo quaerat aspernatur eaque, veritatis debitis architecto!
@@ -92,7 +93,7 @@
             totam
             deserunt et?</p>
         </article>
-        <article class="article-item none">
+        <article class="article-item art2 none">
           <h3>Article 3</h3>
           <p class="p-article">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Impedit, sapiente laborum
             inventore officia labore quisquam mollitia nemo quaerat aspernatur eaque, veritatis debitis architecto!
