--- a/index.html
+++ b/index.html
@@ -39,20 +39,31 @@
     <section id="articles" class="section">
       <h2>Artículos</h2>
       <div class="articles-container">
-        <svg class="back" fill="#000000" height="40px" width="40px" version="1.1" id="Layer_1"
-          xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 455 455"
-          xml:space="preserve" transform="rotate(180)">
+        <svg class="back" width="40px" height="40px" viewBox="0 0 512 512" xmlns="http://www.w3.org/2000/svg"
+          fill="#000000">
           <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
           <g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g>
           <g id="SVGRepo_iconCarrier">
-            <g>
-              <g>
-                <path
-                  d="M227.5,0C101.762,0,0,101.75,0,227.5C0,353.239,101.75,455,227.5,455C353.24,455,455,353.25,455,227.5 C455,101.761,353.251,0,227.5,0z M352.947,238.106l-68.939,68.939c-9.371,9.372-25.606,2.836-25.606-10.606v-12.691h-145.74 c-8.284,0-15-6.716-15-15v-82.496c0-8.284,6.716-15,15-15h145.74V158.56c0-13.361,16.202-20.016,25.606-10.606l68.939,68.939 C358.805,222.751,358.805,232.249,352.947,238.106z">
-                </path>
+            <defs>
+              <style>
+                .cls-1 {
+                  fill: none;
+                  stroke: #000000;
+                  stroke-linecap: round;
+                  stroke-linejoin: round;
+                  stroke-width: 20px;
+                }
+              </style>
+            </defs>
+            <g data-name="Layer 2" id="Layer_2">
+              <g data-name="E421, Back, buttons, multimedia, play, stop" id="E421_Back_buttons_multimedia_play_stop">
+                <circle class="cls-1" cx="256" cy="256" r="246"></circle>
+                <line class="cls-1" x1="352.26" x2="170.43" y1="256" y2="256"></line>
+                <polyline class="cls-1" points="223.91 202.52 170.44 256 223.91 309.48"></polyline>
               </g>
             </g>
           </g>
+        </svg>
         </svg>
         <article class="article-item art0">
           <h3>Article 1</h3>
@@ -112,17 +123,20 @@
             totam
             deserunt et?</p>
         </article>
-        <svg class="next" fill="#000000" height="40px" width="40px" version="1.1" id="Layer_1"
-          xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 455 455"
-          xml:space="preserve">
+        <svg class="next" width="40px" height="40px" viewBox="0 0 512 512" xmlns="http://www.w3.org/2000/svg"
+          fill="#000000">
           <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
           <g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g>
           <g id="SVGRepo_iconCarrier">
-            <g>
-              <g>
-                <path
-                  d="M227.5,0C101.762,0,0,101.75,0,227.5C0,353.239,101.75,455,227.5,455C353.24,455,455,353.25,455,227.5 C455,101.761,353.251,0,227.5,0z M352.947,238.106l-68.939,68.939c-9.371,9.372-25.606,2.836-25.606-10.606v-12.691h-145.74 c-8.284,0-15-6.716-15-15v-82.496c0-8.284,6.716-15,15-15h145.74V158.56c0-13.361,16.202-20.016,25.606-10.606l68.939,68.939 C358.805,222.751,358.805,232.249,352.947,238.106z">
-                </path>
+            <defs>
+
+            </defs>
+            <g data-name="Layer 2" id="Layer_2">
+              <g data-name="E420, Control, forward, multimedia, music, next"
+                id="E420_Control_forward_multimedia_music_next">
+                <circle class="cls-1" cx="256" cy="256" r="246"></circle>
+                <line class="cls-1" x1="159.74" x2="341.57" y1="256" y2="256"></line>
+                <polyline class="cls-1" points="288.09 309.48 341.56 256 288.09 202.52"></polyline>
               </g>
             </g>
           </g>
