--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
           </g>
         </svg>
         </svg>
-        <article class="article-item art0">
+        <article class="article-item">
           <h3>Article 1</h3>
           <p class="p-article">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Impedit, sapiente
             laborum
@@ -85,7 +85,7 @@
             totam
             deserunt et?</p>
         </article>
-        <article class="article-item art1 none">
+        <article class="article-item none">
           <h3>Article 2</h3>
           <p class="p-article">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Impedit, sapiente laborum
             inventore officia labore quisquam mollitia nemo quaerat aspernatur eaque, veritatis debitis architecto!
@@ -104,7 +104,7 @@
             totam
             deserunt et?</p>
         </article>
-        <article class="article-item art2 none">
+        <article class="article-item none">
           <h3>Article 3</h3>
           <p class="p-article">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Impedit, sapiente laborum
             inventore officia labore quisquam mollitia nemo quaerat aspernatur eaque, veritatis debitis architecto!
