--- a/index.html
+++ b/index.html
@@ -39,23 +39,23 @@
     <section id="articles" class="section">
       <h2>Artículos</h2>
       <div class="articles-container">
-        <svg class="back" width="40px" height="40px" viewBox="0 0 512 512" xmlns="http://www.w3.org/2000/svg"
-          fill="#000000">
+        <svg class="back" fill="#000000" height="40px" width="40px" version="1.1" id="Capa_1"
+          xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 471.2 471.2"
+          xml:space="preserve">
           <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
           <g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g>
           <g id="SVGRepo_iconCarrier">
-            <defs>
-
-            </defs>
-            <g data-name="Layer 2" id="Layer_2">
-              <g data-name="E421, Back, buttons, multimedia, play, stop" id="E421_Back_buttons_multimedia_play_stop">
-                <circle class="cls-1" cx="256" cy="256" r="246"></circle>
-                <line class="cls-1" x1="352.26" x2="170.43" y1="256" y2="256"></line>
-                <polyline class="cls-1" points="223.91 202.52 170.44 256 223.91 309.48"></polyline>
+            <g>
+              <g>
+                <path
+                  d="M396.7,0H74.5C33.4,0,0,33.4,0,74.5v322.2c0,41.1,33.4,74.5,74.5,74.5h322.2c41.1,0,74.5-33.4,74.5-74.5V74.5 C471.2,33.5,437.7,0,396.7,0z M444.2,396.7c0,26.2-21.3,47.5-47.5,47.5H74.5c-26.2,0-47.5-21.3-47.5-47.5V74.5 C27,48.3,48.3,27,74.5,27h322.2c26.2,0,47.5,21.3,47.5,47.5V396.7z">
+                </path>
+                <path
+                  d="M344.6,222.1H159.2l47.4-47.5c5.3-5.3,5.3-13.8,0-19.1s-13.8-5.3-19.1,0L117,226c-5.3,5.3-5.3,13.8,0,19.1l70.6,70.5 c2.6,2.6,6.1,4,9.5,4s6.9-1.3,9.5-4c5.3-5.3,5.3-13.8,0-19.1L159.1,249h185.5c7.5,0,13.5-6,13.5-13.5S352.1,222.1,344.6,222.1z">
+                </path>
               </g>
             </g>
           </g>
-        </svg>
         </svg>
         <article class="article-item">
           <h3>Article 1</h3>
@@ -115,20 +115,20 @@
             totam
             deserunt et?</p>
         </article>
-        <svg class="next" width="40px" height="40px" viewBox="0 0 512 512" xmlns="http://www.w3.org/2000/svg"
-          fill="#000000">
+        <svg class="next" fill="#000000" height="40px" width="40px" version="1.1" id="Capa_1"
+          xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 471.2 471.2"
+          xml:space="preserve">
           <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
           <g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g>
           <g id="SVGRepo_iconCarrier">
-            <defs>
-
-            </defs>
-            <g data-name="Layer 2" id="Layer_2">
-              <g data-name="E420, Control, forward, multimedia, music, next"
-                id="E420_Control_forward_multimedia_music_next">
-                <circle class="cls-1" cx="256" cy="256" r="246"></circle>
-                <line class="cls-1" x1="159.74" x2="341.57" y1="256" y2="256"></line>
-                <polyline class="cls-1" points="288.09 309.48 341.56 256 288.09 202.52"></polyline>
+            <g>
+              <g>
+                <path
+                  d="M396.7,0H74.5C33.4,0,0,33.4,0,74.5v322.2c0,41.1,33.4,74.5,74.5,74.5h322.2c41.1,0,74.5-33.4,74.5-74.5V74.5 C471.2,33.5,437.7,0,396.7,0z M444.2,396.7c0,26.2-21.3,47.5-47.5,47.5H74.5c-26.2,0-47.5-21.3-47.5-47.5V74.5 C27,48.3,48.3,27,74.5,27h322.2c26.2,0,47.5,21.3,47.5,47.5V396.7z">
+                </path>
+                <path
+                  d="M283.6,155.6c-5.3-5.3-13.8-5.3-19.1,0c-5.3,5.3-5.3,13.8,0,19.1l47.5,47.5H126.6c-7.5,0-13.5,6-13.5,13.5 s6,13.5,13.5,13.5H312l-47.4,47.4c-5.3,5.3-5.3,13.8,0,19.1c2.6,2.6,6.1,4,9.5,4s6.9-1.3,9.5-4l70.5-70.5c5.3-5.3,5.3-13.8,0-19.1 L283.6,155.6z">
+                </path>
               </g>
             </g>
           </g>
