--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
           </g>
         </svg>
         <article class="article-item">
-          <h3>Article 1</h3>
+          <h3>Primero articulo</h3>
           <p class="p-article">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Impedit, sapiente
             laborum
             inventore officia labore quisquam mollitia nemo quaerat aspernatur eaque, veritatis debitis architecto!
