--- a/index.html
+++ b/index.html
@@ -140,6 +140,21 @@
     </section>
     <section id="contact" class="section">
       <h2>Contacto</h2>
+      <form action="mailto: riberojuanca@gmail.com" method="post">
+        <div class="field">
+          <label for="nombre">Nombre completo:</label>
+          <input type="text" id="name" name="nombre" required>
+        </div>
+        <div class="field">
+          <label for="correo">Correo:</label>
+          <input type="email" id="email" name="correo" required>
+        </div>
+        <div class="field">
+          <label for="mensaje">Mensaje:</label>
+          <textarea name="mensaje" id="message" required></textarea>
+        </div>
+        <input type="submit" name="enviar" id="submit">
+      </form>
     </section>
   </div>
 </body>
