contact section created

--- a/index.html
+++ b/index.html
@@ -139,10 +139,9 @@
       <h2>Podcasts</h2>
     </section>
     <section id="contact" class="section">
-      <h2>Contacto</h2>
       <form action="mailto: riberojuanca@gmail.com" method="post">
         <div class="field">
-          <label for="nombre">Nombre completo:</label>
+          <label for="nombre">Nombre:</label>
           <input type="text" id="name" name="nombre" required>
         </div>
         <div class="field">
